# i-just-want-to-submit-my-assignments

./: .gitignore  README.md  pyproject.toml
.dvc/: config
data/final/: .gitignore  01_hdb_resale_transactions.csv.dvc  02_medical_records.csv  02_medical_records.csv.dvc
data/raw/: 02_medical_records.csv
notebooks/: .gitignore  Assignment.pkl  EDA.ipynb  EDA.ipynb.dvc  EDA_MODELLING.ipynb  EDA_MODELLING.ipynb.dvc
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
notebooks/catboost_info/learn/: events.out.tfevents
notebooks/mlruns/2/01dddb3aa1544cc484651b9a63571c81/artifacts/: Results.html
notebooks/mlruns/2/09b8f925fba4435580bd3f0aefd23df8/artifacts/: Results.html
notebooks/mlruns/2/0e7739facc744d36aefcf8e82219000d/artifacts/: Transformation Pipeline.pkl
notebooks/mlruns/2/124c459af44c4de58e1b587dabd45c31/artifacts/: Holdout.html  Results.html
notebooks/mlruns/2/18ba305ac18348b1a2b34de4a3b3d95f/artifacts/: Results.html
notebooks/mlruns/2/23e9c5ae94b24ed78af8c109ce9db466/artifacts/: Results.html
notebooks/mlruns/2/389bfbc28fef4040954fec1843541fbb/artifacts/: Results.html
notebooks/mlruns/2/3aa94b3748a44acea3a3d5d6e0ce9ee0/artifacts/: Results.html
notebooks/mlruns/2/4533a294c3b9424c9168a0fb5506e985/artifacts/: Results.html
notebooks/mlruns/2/5cc07e56767f438fb077f0591c7afe9a/artifacts/: Results.html
website/: final_model.pkl  main.py  main.py.dvc  pyproject.toml  requirements.txt
website/static/: hdb.css  medical.css
website/templates/: hdb.html  medical.html
(+52 files in other folders)
