[tool.poetry]
name = "website"
version = "0.1.0"
description = ""
authors = ["shitneedtogetfiles <75624875+shitneedtogetfiles@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.3"
flask = "^2.3.2"
jinja2 = "^3.1.2"
catboost = "^1.2"
numpy = "^1.25.2"
gunicorn = "^21.2.0"
certifi = "^2023.7.22"
itsdangerous = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
